# color_detect

./: CMakeLists.txt  README.md  main.cpp
